--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin":"./index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/okesseko/react-command-line-game.git"
